--- a/E-Service/BEL/BEL.csproj
+++ b/E-Service/BEL/BEL.csproj
@@ -51,6 +51,9 @@
     <Compile Include="ServiceModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceWithCommentModel.cs" />
+    <Compile Include="TokenModel.cs" />
+    <Compile Include="TokenUserModel.cs" />
+    <Compile Include="UserTokenModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
