--- a/E-Service/E-Service/E-Service.csproj
+++ b/E-Service/E-Service/E-Service.csproj
@@ -91,6 +91,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Auth\CustomAuth.cs" />
+    <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\CustomerHomeController.cs" />
     <Compile Include="Controllers\CustomerServiceController.cs" />
     <Compile Include="Global.asax.cs">
